--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,11 +22,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "random.seed(334)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_samples(titles_set, n=100):\n",
+    "    return random.sample(list(titles_set), n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_len = 0\n",
+    "def get_len(titles):\n",
+    "      global _len\n",
+    "            \n",
+    "      current_len = len(titles)\n",
+    "      print(f'current: {current_len}\\n'\n",
+    "            f'diff: {current_len - _len}')\n",
+    "\n",
+    "      _len = current_len\n",
+    "\n",
+    "      return"
    ]
   },
   {
@@ -38,40 +67,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_samples(titles_set, n=100):\n",
-    "    return random.sample(list(titles_set), n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "362955"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "UnboundLocalError",
+     "evalue": "local variable '_len' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Storage\\python3_project\\Thai_Dictionary_Cleaner\\Wikipedia.ipynb Cell 7\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mthwiki-latest-all-titles-in-ns0\u001b[39m\u001b[39m\"\u001b[39m, encoding\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     titles \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(f\u001b[39m.\u001b[39mread()\u001b[39m.\u001b[39msplitlines())\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m get_len(titles)\n",
+      "\u001b[1;32mc:\\Storage\\python3_project\\Thai_Dictionary_Cleaner\\Wikipedia.ipynb Cell 7\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_len\u001b[39m(titles):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     current_len \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(titles)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mcurrent: \u001b[39m\u001b[39m{\u001b[39;00mcurrent_len\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m           \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mdiff: \u001b[39m\u001b[39m{\u001b[39;00mcurrent_len\u001b[39m \u001b[39m\u001b[39m-\u001b[39m\u001b[39m \u001b[39m_len\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     _len \u001b[39m=\u001b[39m current_len\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable '_len' referenced before assignment"
+     ]
     }
    ],
    "source": [
     "with open(\"thwiki-latest-all-titles-in-ns0\", encoding=\"utf-8\") as f:\n",
     "    titles = set(f.read().splitlines())\n",
     "    \n",
-    "len(titles)"
+    "get_len(titles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -277,12 +298,12 @@
     "    \n",
     "titles = titles_temp\n",
     "\n",
-    "len(titles)"
+    "get_len(titles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -454,12 +475,12 @@
     "        \n",
     "titles = titles_temp\n",
     "\n",
-    "len(titles)"
+    "get_len(titles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -607,12 +628,12 @@
     "titles_temp = [title for title in titles if pythainlp.util.countthai(title) > 0.1]\n",
     "titles = set(titles_temp)\n",
     "\n",
-    "len(titles)"
+    "get_len(titles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -858,12 +879,12 @@
     "        titles_temp.add(title)\n",
     "    \n",
     "titles = titles_temp\n",
-    "len(titles)"
+    "get_len(titles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1288,12 +1309,12 @@
     "        titles_temp.add(title)\n",
     "        \n",
     "titles = titles_temp\n",
-    "len(titles)"
+    "get_len(titles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1454,12 +1475,12 @@
    "source": [
     "titles = set([title for title in titles if \"พ.ศ.\" not in title])\n",
     "\n",
-    "len(titles)"
+    "get_len(titles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2798,7 +2819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2820,7 +2841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2949,7 +2970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2972,7 +2993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
