--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,19 +67,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable '_len' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Storage\\python3_project\\Thai_Dictionary_Cleaner\\Wikipedia.ipynb Cell 7\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mthwiki-latest-all-titles-in-ns0\u001b[39m\u001b[39m\"\u001b[39m, encoding\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     titles \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(f\u001b[39m.\u001b[39mread()\u001b[39m.\u001b[39msplitlines())\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m get_len(titles)\n",
-      "\u001b[1;32mc:\\Storage\\python3_project\\Thai_Dictionary_Cleaner\\Wikipedia.ipynb Cell 7\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_len\u001b[39m(titles):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     current_len \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(titles)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mcurrent: \u001b[39m\u001b[39m{\u001b[39;00mcurrent_len\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m           \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mdiff: \u001b[39m\u001b[39m{\u001b[39;00mcurrent_len\u001b[39m \u001b[39m\u001b[39m-\u001b[39m\u001b[39m \u001b[39m_len\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     _len \u001b[39m=\u001b[39m current_len\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Storage/python3_project/Thai_Dictionary_Cleaner/Wikipedia.ipynb#W5sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable '_len' referenced before assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current: 362955\n",
+      "diff: 362955\n"
      ]
     }
    ],
@@ -92,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +196,7 @@
        " 'มือตบ']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +245,7 @@
        "[['บรั่นดี', 'วงดนตรี'], ['บรั่นดี']]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,18 +272,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "353833"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current: 353833\n",
+      "diff: -9122\n"
+     ]
     }
    ],
    "source": [
@@ -303,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +405,7 @@
        " 'Santisukia_pagetii']"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,18 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "465912"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current: 465912\n",
+      "diff: 112079\n"
+     ]
     }
    ],
    "source": [
@@ -480,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +580,7 @@
        " 'ฮามิลตงซูวาริส']"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,18 +601,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "346494"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current: 346494\n",
+      "diff: -119418\n"
+     ]
     }
    ],
    "source": [
@@ -633,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +731,7 @@
        " 'สเปรย์กระป๋อง']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +758,7 @@
        "1465"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +827,7 @@
        " 'เมโทร:']"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,18 +845,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "345587"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current: 345587\n",
+      "diff: -907\n"
+     ]
     }
    ],
    "source": [
@@ -884,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +980,7 @@
        " 'กองทัพปฏิวัติโซมี']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1015,7 @@
        "4992"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1138,7 @@
        " 'รายการอาการในรหัส']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1185,7 @@
        "57"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1263,7 @@
        " 'รายได้มูลฐาน']"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,18 +1275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "340652"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current: 340652\n",
+      "diff: -4935\n"
+     ]
     }
    ],
    "source": [
@@ -1314,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1408,7 @@
        " 'เอกซ์เรย์']"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1458,18 +1444,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "334594"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current: 334594\n",
+      "diff: -6058\n"
+     ]
     }
    ],
    "source": [
@@ -1480,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1572,7 @@
        " 'สโมสรฟุตบอลสปอร์ติงลิสบอน']"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1607,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1600,7 @@
        "17153"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1628,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -2637,7 +2621,7 @@
        "  ...]]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2663,7 +2647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -2672,7 +2656,7 @@
        "7951"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2692,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -2800,7 +2784,7 @@
        " 'ประเทศคูเวตในพาราลิมปิกฤดูร้อน2020']"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2819,7 +2803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -2828,7 +2812,7 @@
        "6701"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2841,7 +2825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -2949,7 +2933,7 @@
        " 'ธงในนครรัฐวาติกัน']"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2970,7 +2954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -2979,7 +2963,7 @@
        "(5754, 1430)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2993,7 +2977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -3101,7 +3085,7 @@
        " 'ประเทศบุรุนดี']"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
