--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -593,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exclude non-Thai\n",
+    "### Exclude complete non-Thai\n",
     "> ชื่อหัวข้อควรเป็นอักษรไทย  \n",
     "> ...  \n",
     "> ทั้งนี้ มีข้อยกเว้นบางประการที่ไม่ต้องใช้อักษรไทยเป็นชื่อบทความ"
@@ -892,96 +892,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Seperate colon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1465"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len([title for title in titles if \":\" in title])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['เลือดชั่ว:เรื่องลับและคำลวงเบื้องหลังบริษัทดาวรุ่งแห่งซิลิคอนแวลลีย์',\n",
-       " 'เรฟโวลูชั่นส์:',\n",
-       " 'ทอมแอนเจอร์รี่:',\n",
-       " 'เอ็นเอ๊กซ์ทีเทคโอเวอร์:ฟิลาเดลเฟีย',\n",
-       " 'รายชื่อตอนในเบ็นเท็น:อัลติเมทเอเลี่ยน',\n",
-       " 'คอลล์ออฟดิวตี:มอเดิร์นวอร์แฟร์',\n",
-       " 'เดอะเลเจนด์ออฟเซลดา:อะลิงก์ทูเดอะแพสต์และโฟร์ซอดส์',\n",
-       " 'นักรบมนตรา:',\n",
-       " 'เอ็นเอ๊กซ์ทีเทคโอเวอร์:บรุกลิน',\n",
-       " 'หวงเฟยหง:ถล่มวังบัวขาว',\n",
-       " 'คอลล์ออฟดิวตี:มอเดิร์นวอร์แฟร์III',\n",
-       " 'สไปเดอร์-แมน:ผงาดข้ามจักรวาลแมงมุม',\n",
-       " 'เคาน์เตอร์-สไตรก์:',\n",
-       " 'เบอร์ดีวิง:กอล์ฟเกิร์ลสตอรี',\n",
-       " 'ชิฟท์2:อันลีชด์',\n",
-       " 'สตาร์เทรค:',\n",
-       " 'ยอดนักสืบจิ๋วโคนัน:เจ้าสาวฮาโลวีน',\n",
-       " 'เดอะเลเจนด์ออฟเซลดา:ทไวไลต์พรินเซสส์',\n",
-       " 'โรบินฮูด:เดอะเลเจนด์ออฟเชอร์วูด',\n",
-       " 'แอสแซสซินครีด:รีวีเลชั่นส์',\n",
-       " 'เทอร์มิเนเตอร์:',\n",
-       " 'คิงดอมส์ออฟแอมะเลอร์:เรกคอนนิ่ง',\n",
-       " 'มาสค์ไรเดอร์ริวคิ:เอ็ดพิโซดไฟนอล',\n",
-       " 'มาเลฟิเซนต์:',\n",
-       " 'ไมเคิลแจ็กสัน:ดิเอ็กซ์เพอร์เรนช์',\n",
-       " 'เบ็นเท็น:อัลติเมทเอเลี่ยน',\n",
-       " 'เดอะซิมส์3:เล็ตไนต์',\n",
-       " 'โคลสคอมแบต:',\n",
-       " 'คังคุไบ:',\n",
-       " 'แฮร์รี่พอตเตอร์:ฮอกวอตส์มิสเตอรี',\n",
-       " 'ยอดนักสืบจิ๋วโคนัน:เรือดำน้ำทมิฬ',\n",
-       " 'ไฮห์สกูลมิวสิคัล3:ซีเนียร์เยียร์',\n",
-       " 'กัปตันอเมริกา:ซีวิลวอร์',\n",
-       " 'อภินิหารตำนานแห่งนาร์เนีย3:ผจญภัยโพ้นทะเล',\n",
-       " 'เอ็นเอ๊กซ์ทีเทคโอเวอร์:อาร์เอฟโวลูชั่น',\n",
-       " 'เซกิโระ:',\n",
-       " 'อิสลาม:ว็อทเดอะเวสเทิร์นนีดส์ทูโนว์',\n",
-       " 'คอมมานด์แอนด์คองเคอร์:เจเนรัลส์',\n",
-       " 'จักรวาลภาพยนตร์มาร์เวล:เฟสห้า',\n",
-       " 'ICD-10บทV,W,X,และY:สาเหตุภายนอกที่ทำให้เกิดพยาธิภาวะและการตาย',\n",
-       " 'มายเลิฟ:',\n",
-       " 'นีดฟอร์สปีด:ฮอตเพอร์ซูท',\n",
-       " 'มาร์เวลสตูดิโอส์:',\n",
-       " '6:66ตายไม่ได้ตาย',\n",
-       " 'ทีนเอจมิวแตนต์นินจาเทอร์เทิลส์:',\n",
-       " 'ทรานส์ฟอร์เมอร์ส:สงครามไซเบอร์ทรอนไตรภาค',\n",
-       " 'เมตันเตโคนัง:',\n",
-       " 'เซอร์ไวเวอร์ปานามา:เกาะอัปยศ',\n",
-       " 'มิชชั่น:อิมพอสซิเบิ้ล',\n",
-       " 'เมโทร:']"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[title for title in titles if \":\" in title][:50]"
+    "### Seperate by non-thai character\n",
+    "\n",
+    "such as \".\", \":\", \"-\""
    ]
   },
   {
