--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -1485,7 +1485,7 @@
     "> ให้กษัตริย์ไทยที่ราชาภิเษกแล้ว ใช้คำนำหน้าชื่อว่า \"พระบาทสมเด็จพระ\" ถ้ายังไม่ราชาภิเษก ใช้ \"สมเด็จพระ\"\n",
     "> กษัตริย์ไทยในอดีต ใช้ \"สมเด็จพระ\" แต่อาจใช้ตามความนิยม เช่น \"ขุนหลวง,\" \"พ่อขุน,\" \"พระยา\"  \n",
     "  \n",
-    "List of royal   \n",
+    "List of royal ranks and titles  \n",
     "https://th.wikipedia.org/wiki/%E0%B8%9E%E0%B8%A3%E0%B8%B0%E0%B8%A2%E0%B8%A8%E0%B9%80%E0%B8%88%E0%B9%89%E0%B8%B2%E0%B8%99%E0%B8%B2%E0%B8%A2%E0%B9%84%E0%B8%97%E0%B8%A2  \n",
     "\n",
     "**If this is rude, this should be altered**"
