--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        " 'เดเกเลีย']"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "[['บรั่นดี', 'วงดนตรี'], ['บรั่นดี']]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        " 'ทุกขเวทนา']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        " 'วิวาห์ลวง']"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
        " 'วัดมัชฌิมาราม']"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        " 'ซงเหียน']"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
        " 'สโมสรฟุตบอลวัวชน']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
        "4621"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
        " 'รายชื่อไวรัสคอมพิวเตอร์']"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,7 @@
        "55"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1322,7 @@
        " 'รายาผิวขาว']"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1467,7 @@
        " 'พระวรวงศ์เธอพระองค์เจ้าปิยบุตร']"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
        "300497"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -2538,7 +2538,7 @@
        "  ...]]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -2573,7 +2573,7 @@
        "5483"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2593,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -2701,7 +2701,7 @@
        " 'การขนส่งระบบรางในประเทศญี่ปุ่น']"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2720,7 +2720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -2729,7 +2729,7 @@
        "5108"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2742,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -2850,7 +2850,7 @@
        " 'จังหวัดแพร่ในการเลือกตั้งสมาชิกสภาผู้แทนราษฎรไทยเป็นการทั่วไป']"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2874,7 +2874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -2894,7 +2894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -3002,7 +3002,7 @@
        " 'ลำดับการสืบราชสันตติวงศ์อดีตออสเตรีย']"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3018,12 +3018,14 @@
     "### Process country names\n",
     "> ใช้ชื่อ \"ประเทศ...\" เช่น ประเทศญี่ปุ่น ดูเพิ่ม วิกิพีเดีย:โครงการวิกิประเทศ\n",
     "\n",
-    "There are \"ประเทศ...\" patterns and \"รัฐ\" patterns (such as Palestine)"
+    "There are \"ประเทศ...\" patterns and \"รัฐ\" patterns (such as Palestine)\n",
+    "\n",
+    "Some proper-noun like movie titles possibly holds this, so hold both"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -3032,7 +3034,7 @@
        "(398, 1250)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3046,7 +3048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -3154,13 +3156,166 @@
        " 'ประเทศบาสก์']"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "get_samples(pratheet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current: 294305\n",
+      "diff: 897\n"
+     ]
+    }
+   ],
+   "source": [
+    "# seperate\n",
+    "titles_temp = set()\n",
+    "\n",
+    "#holds both (before and after)\n",
+    "for title in titles:\n",
+    "    if title.startswith(\"ประเทศ\"):\n",
+    "        titles_temp.add(title[6:])\n",
+    "        titles_temp.add(title)\n",
+    "    elif title.startswith(\"รัฐ\"):\n",
+    "        titles_temp.add(title[3:])\n",
+    "        titles_temp.add(title)\n",
+    "    else:\n",
+    "        titles_temp.add(title)\n",
+    "        \n",
+    "titles = titles_temp\n",
+    "\n",
+    "get_len(titles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['สูโดเอฟรีดีน',\n",
+       " 'ปิยะรัฐ',\n",
+       " 'คันนาวาโร่',\n",
+       " 'วันอัป',\n",
+       " 'หมู่เกาะกิลเบิร์ต',\n",
+       " 'เอิร์ลแห่งแอรันเดล',\n",
+       " 'อฺวี๋เหวินเสีย',\n",
+       " 'แม็กไมเคิล',\n",
+       " 'สถาบันอุดมศึกษานานาชาติ',\n",
+       " 'ไดสึเกะนามิกาวะ',\n",
+       " 'ปชาบดี',\n",
+       " 'บูเก๊ะตา',\n",
+       " 'ป่าอิสิปตนมฤคทายวัน',\n",
+       " 'มหาวิหารชิคเชสเตอร์',\n",
+       " 'อีบีซา',\n",
+       " 'ถ้วยยาไฮเกีย',\n",
+       " 'ก็อทลีพไดม์เลอร์',\n",
+       " 'ไดฟุกุ',\n",
+       " 'อวินฟีเยอเอต์กัตเรอตีป์',\n",
+       " 'พรปวีณ์นีระสิงห์',\n",
+       " 'ทาวน์เซนด์แฮร์ริส',\n",
+       " 'ุ',\n",
+       " 'โอรังอัซลี',\n",
+       " 'พระเจ้าหอคำดวงทิพย์',\n",
+       " 'ซิมงลาปลาซ',\n",
+       " 'โพโทไซโทซิส',\n",
+       " 'เกมล่าเกม',\n",
+       " 'เคนดริก',\n",
+       " 'เครื่องบินสกัดกั้น',\n",
+       " 'ระบาดทั่ว',\n",
+       " 'เคนา',\n",
+       " 'เจ้าพ่อตลาดหุ้น',\n",
+       " 'กณิณปัทมนันถ์',\n",
+       " 'ช่วยไม่ได้',\n",
+       " 'ซาชิฮาระริโนะ',\n",
+       " 'เมืองคะโดะมะ',\n",
+       " 'ยุคกลางตอนปลาย',\n",
+       " 'การคืนสู่พระราชอำนาจของจักรพรรดิเมจิ',\n",
+       " 'ธรรมนูญแห่งราชอาณาจักรไทยพุทธศักราช๒๕๔๐',\n",
+       " 'นักพฤกษศาสตร์',\n",
+       " 'ธงชาติฟินแลนด์',\n",
+       " 'เหยี่ยวกินหอยทาก',\n",
+       " 'รังสิตพล',\n",
+       " 'ญานินวิสมิตะนันทน์',\n",
+       " 'อะบุลฮาซันบานีซาดร์',\n",
+       " 'สนามกีฬาสมโภชเชียงใหม่',\n",
+       " 'รามใหญ่',\n",
+       " 'ซูเบอร์',\n",
+       " 'คลองมหานาค',\n",
+       " 'ซัยนุลอาบิดีน',\n",
+       " 'ปริโมและเอปิโก',\n",
+       " 'ณิรัฐกานต์',\n",
+       " 'ลาวัวดูว์บงดีเยอ',\n",
+       " 'อิซเซมิยาเกะ',\n",
+       " 'การบำบัดด้วยการปรับเปลี่ยนความคิดและพฤติกรรม',\n",
+       " 'วีวีอานีเดียซอาร์รอโย',\n",
+       " 'ไฟฟ์เฟอร์',\n",
+       " 'เว็บคิท',\n",
+       " 'สปากส์ฟลาย',\n",
+       " 'เหตุการณ์การลอบสังหารจอห์นเอฟ',\n",
+       " 'ไมค์สกรอย',\n",
+       " 'เทศบาลตำบลบ่อแฮ้ว',\n",
+       " 'อุมัรบุตรคอฏฏอบ',\n",
+       " 'ธันเดอร์โบลต์ส',\n",
+       " 'มิเคลสัน',\n",
+       " 'แอนนี่โปรเจ็คเอช',\n",
+       " 'วัคซีนเชื้อตาย',\n",
+       " 'อ็อลแบร์ต',\n",
+       " 'ชาวอิรักเติร์กเมน',\n",
+       " 'วิถีชีวิต',\n",
+       " 'ภาษามากัสไซ',\n",
+       " 'สะพานสาทร',\n",
+       " 'ชิมะสึมิสึฮิสะ',\n",
+       " 'เทศมณฑลดอรอบ',\n",
+       " 'วอลเลย์บอลเยาวชนหญิงชิงแชมป์อาเซียนครั้งที่',\n",
+       " 'ฟุตบอลทีมชาติฝรั่งเศส',\n",
+       " 'แม่น้ำจระเข้สามพัน',\n",
+       " 'พรีชเชอร์ส',\n",
+       " 'ศาสนาคอนโตเกียว',\n",
+       " 'กัญญกรพินิจ',\n",
+       " 'มะกลํ่าเครือ',\n",
+       " 'ช่างตัดผมแห่งเซวิลยา',\n",
+       " 'พิจิตรสเตเดียม',\n",
+       " 'การกลับมาของจูเด็นเซ็นไตเคียวริวเจอร์',\n",
+       " 'กระบวนการเตรียมการรับรู้',\n",
+       " 'บอมบ์เบอร์แมน',\n",
+       " 'ยีราฟโซมาลี',\n",
+       " 'พระพิธีธรรม',\n",
+       " 'ดอมเพริดัน',\n",
+       " 'เบนจามินวอล์เกอร์',\n",
+       " 'สนามกีฬาโอลิมปิกสต็อกโฮล์ม',\n",
+       " 'เอมีลเฮสกีย์',\n",
+       " 'เช่า',\n",
+       " 'ชียากูอัลวิส',\n",
+       " 'ภาษาชาน',\n",
+       " 'กองกำลังป้องกันอิสราเอล',\n",
+       " 'วันโกหก',\n",
+       " 'ลิงลม',\n",
+       " 'หม่อมราชวงศ์สังขดิศ',\n",
+       " 'กาฟาร์']"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_samples(titles)"
    ]
   },
   {
