--- a/Volubilis/VolubilisCleaner.ipynb
+++ b/Volubilis/VolubilisCleaner.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "dcd6c5a0-e67b-4976-9748-46183856ec84",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9385d13f-749f-4189-bf55-c183235a15db",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "3b0a175f-f3a3-4e52-bd57-1055bedd6b90",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "[116423 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,17 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "c232a87b-bb48-4993-9bdf-58090ccc00de",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(115675, 2)"
+       "(116423, 2)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "9480d98c-9d2e-4edd-8f88-6043a21e6f7b",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "(116422, 2)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "034eb405-5456-455b-95ea-a4af927dd700",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "(115675, 2)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "34dacd42-fb56-4f23-bb38-c895b25b57e6",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 115675/115675 [00:18<00:00, 6096.72it/s]\n"
+      "  0%|          | 0/115675 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 115675/115675 [00:10<00:00, 10708.36it/s]\n"
      ]
     },
     {
@@ -406,7 +413,7 @@
        "[121121 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,21 +500,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b4a62bef-5d7c-4ada-a61e-c1b6d7781701",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"wiki_titles.txt\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(\"\\n\".join(list(ths)))"
+    "with open(\"volubilis_modified.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(\"\\n\".join(list(df_new[\"THA\"])))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (Local)",
+   "display_name": "thai",
    "language": "python",
-   "name": "local-base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -519,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
